--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+2020/03/02 (v0.7.0.1)
+-------------------
+
+   - Fix building Python Wheels
+
 2020/03/02 (v0.7.0)
 -------------------
 
