Drop the universal wheel (#4)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2021/06/29 (v0.7.0.2)
+---------------------
+
+   - Drop universal wheel
+
+
 2021/06/29 (v0.7.0.1)
 -------------------
 
